--- a/apunte/cap_nb.tex
+++ b/apunte/cap_nb.tex
@@ -362,46 +362,79 @@ Este cálculo puede interpretarse indistintamente como la probabilidad asignada 
 Es importante destacar que en este análisis estamos utilizando solo la parte de verosimilitud del modelo Naïve Bayes. Una vez que multiplicamos por la probabilidad a priori de las clases en Naïve Bayes, podríamos obtener resultados diferentes a los obtenidos con el modelo de lenguaje.
 
 
+
 \section{Evaluación}
 
-\begin{itemize}
- \item Consideremos solo tareas de clasificación de texto binario.
- \item Imagina que eres el CEO de Delicious Pie Company.
- \item Quieres saber lo que la gente está diciendo sobre tus pasteles.
- \item Por lo tanto, construyes un detector de tweets de "Delicious Pie" con las siguientes clases:
-\begin{itemize}
-\item Clase positiva: tweets sobre Delicious Pie Co.
-\item Clase negativa: todos los demás tweets.
-\end{itemize}
-\end{itemize}
+La evaluación juega un papel crucial en la construcción de sistemas de PLN basados en aprendizaje automático. Al construir estos sistemas, es común llevar a cabo comparaciones y experimentos con diversos modelos durante el proceso de entrenamiento, con el fin de elegir el modelo más idóneo para su posterior implementación en producción. Generalmente, adoptamos un enfoque cuantitativo para evaluar modelos, contrastando las predicciones realizadas con las predicciones esperadas, y resumiendo estos resultados mediante métricas de evaluación. Este enfoque cuantitativo se prefiere debido a que un enfoque cualitativo o de inspección manual no resulta escalable. Ilustremos este proceso de evaluación con un ejemplo.
 
 
+\begin{example}
+Supongamos un problema de clasificación binaria, para la cual queremos comparar dos modelos de clasificación $m_1$ y $m_2$. Probamos los modelos sobre un conjunto de datos de prueba y obtenemos las predicciones señaladas en la Tabla~\ref{tab:ej_sentimiento}.
 
-\subsection{La Matriz de Confusión 2x2}
-\begin{table}[h]
+\begin{table}[htbp]
+\centering
+\begin{tabular}{|l|l|l|l|}
+\hline
+\textbf{Texto} & \textbf{Clase} & \textbf{m1} & \textbf{m2} \\
+\hline
+no estoy bien & negativo & negativo & positivo \\
+al fin! & positivo & positivo & negativo \\
+que pena & negativo & negativo & negativo \\
+feliz & positivo & positivo & positivo \\
+no quiero & negativo & positivo & negativo \\
+jamás! & negativo & negativo & negativo \\
+buena idea & positivo & positivo & negativo \\
+chao contigo & negativo & positivo & negativo \\
+\hline
+\end{tabular}
+\caption{Sentimiento de texto}
+\label{tab:ej_sentimiento}
+\end{table}
+
+Se puede observar que tanto el modelo $m_1$ como el modelo $m_2$ presentan errores en sus predicciones al compararse con las categorías reales de los ejemplos (columna clase), también conocidas como ``gold labels'' o ``ground truth''. Sin embargo, ¿cómo determinamos cuál modelo es mejor? Para abordar esta pregunta, resulta conveniente calcular métricas de desempeño, las cuales se derivan al contrastar las predicciones de un modelo con sus salidas esperadas.
+\end{example}
+
+\subsection{Matriz de Confusión}
+
+La mayoría de las métricas de evaluación para problemas de clasificación se derivan de una matriz de confusión (véase Tabla~\ref{tab:matriz_confusion}), la cual representa una tabla de contingencia entre las predicciones de un modelo y las salidas esperadas en un conjunto de prueba. Para problemas de clasificación binaria, esta matriz consta de 4 componentes:
+
+\begin{enumerate}
+\item Verdadero Positivo (VP): cuando el modelo predice correctamente la clase positiva, coincidiendo con la salida esperada.
+\item Verdadero Negativo (VN): cuando el modelo predice correctamente la clase negativa, coincidiendo con la salida esperada.
+\item Falso Negativo (FN): cuando el modelo predice incorrectamente la clase negativa, siendo la salida esperada positiva.
+\item Falso Positivo (FP): cuando el modelo predice incorrectamente la clase positiva, siendo la salida esperada negativa.
+\end{enumerate}
+
+Es importante destacar que la definición de qué constituye la clase positiva es arbitraria en un problema de clasificación; generalmente se refiere a la clase que se desea detectar. En el caso de la clasificación de sentimientos, es una coincidencia que la clase positiva se asocie con el sentimiento ``positivo''. Esta consideración es fundamental, ya que el valor de algunas métricas de desempeño (como precisión, recall y $F_1$) depende de la elección de la clase positiva.
+
+\begin{table}[htbp]
 \centering
 \begin{tabular}{|c|c|c|}
 \hline
-\textbf{} & \textbf{Sistema Positivo} & \textbf{Sistema Negativo} \\
+\textbf{} & \textbf{Modelo Positivo} & \textbf{Modelo Negativo} \\
 \hline
-\textbf{Oro Positivo} & Verdadero Positivo (VP) & Falso Negativo (FN) \\
+\textbf{Real Positivo} & Verdadero Positivo (VP) & Falso Negativo (FN) \\
 \hline
-\textbf{Oro Negativo} & Falso Positivo (FP) & Verdadero Negativo (VN) \\
+\textbf{Real Negativo} & Falso Positivo (FP) & Verdadero Negativo (VN) \\
 \hline
 \end{tabular}
+\caption{Matriz de confusión}
+\label{tab:matriz_confusion}
 \end{table}
 
-\textbf{Recall} (también conocido como \textbf{Sensibilidad} o \textbf{Tasa de Verdaderos Positivos}):
+
+\subsection{Métricas de Desempeño}
+
+\textbf{Recall} (exhaustividad) (también conocido como \textbf{Sensibilidad} o \textbf{Tasa de Verdaderos Positivos}):
 \[ \text{Recall} = \frac{VP}{VP + FN} \]
 
 \textbf{Precisión}:
 \[ \text{Precisión} = \frac{VP}{VP + FP} \]
 
-\textbf{Exactitud}:
-\[ \text{Exactitud} = \frac{VP + VN}{VP + FP + VN + FN} \]
+\textbf{Accuracy} (exactitud):
+\[ \text{Accuracy} = \frac{VP + VN}{VP + FP + VN + FN} \]
 
 
-\subsection{Evaluación: Exactitud}
 ¿Por qué no usamos la exactitud como nuestra métrica?
 
 Imagina que vimos 1 millón de tweets:
@@ -418,7 +451,7 @@ Podríamos construir un clasificador tonto que simplemente etiquete todos los tw
 
 Por eso usamos precisión y recall en su lugar.
 
-\subsection{Evaluación: Precisión y Recall}
+
 \textbf{Precisión} mide el porcentaje de elementos que el sistema detectó (es decir, los elementos que el sistema etiquetó como positivos) que son realmente positivos (según las etiquetas de oro humanas).
 
 \[
@@ -431,10 +464,8 @@ Por eso usamos precisión y recall en su lugar.
 \text{Recall} = \frac{\text{Verdaderos Positivos}}{\text{Verdaderos Positivos + Falsos Negativos}}
 \]
 
-\subsection{¿Por qué Precisión y Recall?}
-Considera nuestro clasificador tonto de pasteles que simplemente etiqu
 
-eta nada como "sobre pasteles".
+Considera nuestro clasificador tonto de pasteles que simplemente etiqueta nada como "sobre pasteles".
 
 \begin{itemize}
   \item Exactitud = 99.99\% (etiqueta correctamente la mayoría de los tweets como no relacionados con pasteles)
@@ -489,23 +520,32 @@ F_1 = \frac{2PR}{P + R}
 
 \subsection{Validación Cruzada: Múltiples Divisiones}
 
-\begin{itemize}
-\item La validación cruzada nos permite utilizar todos nuestros datos para el entrenamiento y la prueba sin tener un conjunto de entrenamiento, conjunto de desarrollo y conjunto de prueba fijos.
-\item Elegimos un número $k$ y dividimos nuestros datos en $k$ subconjuntos disjuntos llamados pliegues.
-\item En cada iteración, uno de los pliegues se selecciona como conjunto de prueba mientras que los $k-1$ pliegues restantes se utilizan para entrenar el clasificador.
-\item Calculamos la tasa de error en el conjunto de prueba y repetimos este proceso $k$ veces.
-\item Finalmente, promediamos las tasas de error de estas $k$ ejecuciones para obtener una tasa de error promedio.
-\item Por ejemplo, la validación cruzada de 10 pliegues implica entrenar 10 modelos con el 90\% de los datos y probar cada modelo por separado.
-\item Las tasas de error resultantes se promedian para obtener la estimación final del rendimiento.
-\item Sin embargo, la validación cruzada requiere que todo el corpus sea ciego, lo que impide examinar los datos para sugerir características o comprender el comportamiento del sistema.
-\item Para abordar esto, se crea un conjunto de entrenamiento y un conjunto de prueba fijos, y se realiza la validación cruzada de 10 pliegues dentro del conjunto de entrenamiento.
-\item La tasa de error se calcula convencionalmente en el conjunto de prueba.
-\end{itemize}
+La validación cruzada nos permite utilizar todos nuestros datos para el entrenamiento y la prueba sin tener un conjunto de entrenamiento, conjunto de desarrollo y conjunto de prueba fijos.  Elegimos un número $k$ y dividimos nuestros datos en $k$ subconjuntos disjuntos llamados pliegues.  En cada iteración, uno de los pliegues se selecciona como conjunto de prueba mientras que los $k-1$ pliegues restantes se utilizan para entrenar el clasificador.
+
+Calculamos la tasa de error en el conjunto de prueba y repetimos este proceso $k$ veces.  Finalmente, promediamos las tasas de error de estas $k$ ejecuciones para obtener una tasa de error promedio.
+
+Por ejemplo, la validación cruzada de 10 pliegues implica entrenar 10 modelos con el 90\% de los datos y probar cada modelo por separado.  Las tasas de error resultantes se promedian para obtener la estimación final del rendimiento. Sin embargo, la validación cruzada requiere que todo el corpus sea ciego, lo que impide examinar los datos para sugerir características o comprender el comportamiento del sistema.  Para abordar esto, se crea un conjunto de entrenamiento y un conjunto de prueba fijos, y se realiza la validación cruzada de 10 pliegues dentro del conjunto de entrenamiento.  La tasa de error se calcula convencionalmente en el conjunto de prueba.
 
 
 \begin{center}
 \includegraphics[scale=0.28]{pics/cv.png}
 \end{center}
+
+\section{Conjuntos de entrenamiento, prueba y validación}
+Cuando entrenamos un modelo, nuestro objetivo es producir una función $f(\vec{x})$ que mapee correctamente las entradas $\vec{x}$ a las salidas $\hat{y}$ según lo evidenciado por el conjunto de entrenamiento. La evaluación del rendimiento en los datos de entrenamiento puede ser engañosa, ya que nuestro objetivo es entrenar una función capaz de generalizar a ejemplos no vistos. Una forma común de abordar esto es dividir el conjunto de entrenamiento en subconjuntos de entrenamiento y prueba (80\% y 20\% respectivamente). Se entrena el modelo en el subconjunto de entrenamiento y se calcula la precisión en el subconjunto de prueba.
+
+Sin embargo, este enfoque tiene una limitación. En la práctica, a menudo se entrenan varios modelos, se comparan sus calidades y se selecciona el mejor. Si se selecciona el mejor modelo en función de la precisión en el subconjunto de prueba, se obtendrá una estimación excesivamente optimista de la calidad del modelo. No se sabe si la configuración elegida del clasificador final es buena en general o simplemente es buena para los ejemplos particulares en los subconjuntos de prueba.
+
+La metodología aceptada es utilizar una división de tres vías de los datos en conjuntos de entrenamiento, validación (también llamado desarrollo) y prueba\footnote{Un enfoque alternativo es la validación cruzada, pero no se escala bien para entrenar redes neuronales profundas.}. Esto proporciona dos conjuntos apartados: un conjunto de validación (también llamado conjunto de desarrollo) y un conjunto de prueba. Todos los experimentos, ajustes, análisis de errores y selección de modelos deben realizarse
+
+basados en el conjunto de validación. Luego, una única ejecución del modelo final sobre el conjunto de prueba proporcionará una buena estimación de su calidad esperada en ejemplos no vistos. Es importante mantener el conjunto de prueba lo más limpio posible, realizando la menor cantidad de experimentos posible en él. Incluso algunos defienden que no se deben mirar siquiera los ejemplos en el conjunto de prueba, para evitar sesgar el diseño del modelo.
+
+\begin{figure}[htb]
+	\centering
+	 \includegraphics[scale=0.55]{pics/validation.png}
+\end{figure}
+
+\footnotetext{Fuente: \url{https://www.codeproject.com/KB/AI/1146582/validation.PNG}}
 
 
 \subsection{Matriz de Confusión para clasificación de 3 clases}
